v3.6.10 (XXXX-XX-XX)
--------------------

* Make the number of network I/O threads properly configurable via the startup
  option `--network.io-threads`. This option existed before, but its configured
  value was effectively clamped to a value of `1`. ArangoDB 3.6.10 thus also
  uses a default value of `1` for this option to remain compatible in terms of
  default option values.

* Disable cluster maintenance background threads on coordinators.

  The maintenance threads don't have any purpose on coordinators, so there is no
  need to start them there. This saves 2 or more background threads on
  coordinators. These threads should have mostly been idle before, so saving
  them will not have a huge impact except saving a few MB of thread stack
  memory.

* Updated arangosync to 0.7.12.

* Added new metric `arangodb_network_forwarded_requests` to track the number
  of requests forwarded from one coordinator to another in a load-balancing
  context.

* Added new metric `arangodb_replication_cluster_inventory_requests` to track
  the number of requests received for cluster inventories. The cluster
  inventory API is called at the beginning of a dump process or by arangosync.

* Added new AQL metrics:
  - `arangodb_aql_total_query_time_msec": Total execution time of all AQL
    queries (ms)
  - `arangodb_aql_all_query`: total number of all AQL queries

* Added new metric `arangodb_aql_total_query_time_msec` to track the combined
  runtime of AQL queries (slow queries and non-slow queries).

* Added more scheduler metrics:

  - `arangodb_scheduler_threads_started`: Total number of scheduler threads
    started
  - `arangodb_scheduler_threads_stopped`: Total number of scheduler threads
    stopped
  - `arangodb_scheduler_jobs_done`: Total number of scheduler queue jobs done
  - `arangodb_scheduler_jobs_submitted`: Total number of jobs submitted to the
    scheduler queue
  - `arangodb_scheduler_jobs_dequeued`: Total number of jobs dequeued from the
    scheduler queue