@@ -27,6 +27,8 @@
 #include "Agency/AgencyFeature.h"
 #include "Agency/Agent.h"
 #include "ApplicationFeatures/ApplicationServer.h"
+#include "Basics/files.h"
+#include "Basics/FileUtils.h"
 #include "Cluster/ServerState.h"
 #include "GeneralServer/ServerSecurityFeature.h"
 #include "Rest/Version.h"
@@ -34,6 +36,11 @@
 
 #if defined(TRI_HAVE_POSIX_THREADS)
 #include <unistd.h>
+#endif
+
+#if defined(USE_MEMORY_PROFILE)
+#include <jemalloc/jemalloc.h>
+#include <velocypack/StringRef.h>
 #endif
 
 #include <velocypack/Builder.h>
@@ -60,6 +67,12 @@ RestStatus RestStatusHandler::execute() {
     generateError(rest::ResponseCode::FORBIDDEN, TRI_ERROR_FORBIDDEN);
     return RestStatus::DONE;
   }
+
+#ifdef USE_MEMORY_PROFILE
+  if (_request->parsedValue("memory", false)) {
+    return executeMemoryProfile();
+  }
+#endif
 
   VPackBuilder result;
   result.add(VPackValue(VPackValueType::Object));
@@ -162,5 +175,28 @@ RestStatus RestStatusHandler::execute() {
 
   result.close();
   generateResult(rest::ResponseCode::OK, result.slice());
+  return RestStatus::DONE;
+}
+
+RestStatus RestStatusHandler::executeMemoryProfile() {
+#if defined(USE_MEMORY_PROFILE)
+  bool found;
+  std::string outDirectory = _request->value("directory", found);
+
+  if (!found) {
+    outDirectory = TRI_GetTempPath();
+  }
+
+  std::string const fileName = FileUtils::buildFilename(outDirectory, "profile.out");
+  char const* f = fileName.c_str();
+  mallctl("prof.dump", NULL, NULL, &f, sizeof(const char *));
+  std::string const content = FileUtils::slurp(fileName);
+  TRI_UnlinkFile(f);
+
+  resetResponse(rest::ResponseCode::OK);
+
+  _response->setContentType(rest::ContentType::TEXT);
+  _response->addRawPayload(velocypack::StringRef(content));
+#endif
   return RestStatus::DONE;
 }
